--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-email/components": "0.0.19",
     "@react-email/render": "^1.0.4",
     "@t3-oss/env-nextjs": "0.10.1",
+    "@tanstack/react-table": "^8.21.2",
     "@types/nprogress": "^0.2.3",
     "arctic": "1.9.0",
     "class-variance-authority": "0.7.0",
